Fixed noticias ao minuto's regex

--- a/m1-data-preparation/pull-data.ipynb
+++ b/m1-data-preparation/pull-data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "historical-glossary",
+   "id": "conscious-crack",
    "metadata": {},
    "source": [
     "# Pulling pages and their mementos from Arquivo.pt\n",
@@ -13,8 +13,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "confirmed-relaxation",
+   "execution_count": 2,
+   "id": "senior-account",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,8 +33,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "incident-natural",
+   "execution_count": 3,
+   "id": "adopted-magnitude",
    "metadata": {},
    "outputs": [
     {
@@ -53,8 +53,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "indie-division",
+   "execution_count": 4,
+   "id": "vocal-event",
    "metadata": {},
    "outputs": [
     {
@@ -63,31 +63,7 @@
      "text": [
       "----------\n",
       "NOT an article: https://noticiasaominuto.com/\n",
-      "Too many requests, sleeping...\n",
-      "Too many requests, sleeping...\n",
-      "Too many requests, sleeping...\n",
-      "Too many requests, sleeping...\n",
-      "Too many requests, sleeping...\n",
-      "Too many requests, sleeping...\n",
-      "Too many requests, sleeping...\n",
-      "Too many requests, sleeping...\n",
       "NOT an article: https://noticiasaominuto.com/robots.txt\n",
-      "Too many requests, sleeping...\n",
-      "Too many requests, sleeping...\n",
-      "Too many requests, sleeping...\n",
-      "Too many requests, sleeping...\n",
-      "Too many requests, sleeping...\n",
-      "Too many requests, sleeping...\n",
-      "Too many requests, sleeping...\n",
-      "Too many requests, sleeping...\n",
-      "Too many requests, sleeping...\n",
-      "Too many requests, sleeping...\n",
-      "Too many requests, sleeping...\n",
-      "Too many requests, sleeping...\n",
-      "Too many requests, sleeping...\n",
-      "Too many requests, sleeping...\n",
-      "Too many requests, sleeping...\n",
-      "Too many requests, sleeping...\n",
       "NOT an article: https://noticiasaominuto.com/manifest.json\n",
       "----------\n",
       "NOT an article: http://publico.pt/\n",
@@ -155,10 +131,6 @@
       "NOT an article: http://publico.pt/verao-sustentavel?page=2\n",
       "NOT an article: http://publico.pt/violencia-no-desporto\n",
       "NOT an article: http://publico.pt/viseu/vouzela\n",
-      "Too many requests, sleeping...\n",
-      "Too many requests, sleeping...\n",
-      "Too many requests, sleeping...\n",
-      "Too many requests, sleeping...\n",
       "NOT an article: http://publico.pt/andre-silva\n",
       "NOT an article: http://publico.pt/aveiro/vale-de-cambra\n",
       "NOT an article: http://publico.pt/beja/serpa\n",
@@ -229,7 +201,7 @@
       "NOT an article: http://publico.pt/autor/publico-com-agencias\n",
       "NOT an article: http://publico.pt/lisboa/sobral-de-monte-agraco\n",
       "NOT an article: http://publico.pt/api/user/newsletter/add\n",
-      "Amount of pages including mementos: {'noticias_ao_minuto': 8632, 'publico': 4065}\n"
+      "Amount of pages (including mementos): {'noticias_ao_minuto': 8632, 'publico': 4065}\n"
      ]
     }
    ],
@@ -242,7 +214,7 @@
     "# TODO\n",
     "# noticias ao minuto sometimes has \"?inlinks=related\" to end of link -> merge the cdx results of the url without GET parameters and with parameters\n",
     "article_verification_regex = {\n",
-    "    \"noticias_ao_minuto\": re.compile(\"^https://noticiasaominuto.com\\/[a-z0-9-%]+\\/[0-9]+\\/[a-z0-9-%]+(?:\\?.*)?$\"),\n",
+    "    \"noticias_ao_minuto\": re.compile(\"^https:\\/\\/noticiasaominuto\\.com\\/[a-z0-9-%]+\\/[0-9]+\\/[a-z0-9-%]+(?:\\?.*)?$\"),\n",
     "    \"publico\": re.compile(\"^http:\\/\\/publico\\.pt\\/[0-9]+\\/[0-9]+\\/[0-9]+\\/[a-z0-9-%]+\\/[a-z0-9-%]+\\/[a-z0-9-%]+(?:\\?.*)?$\")\n",
     "}\n",
     "\n",
@@ -261,7 +233,7 @@
     "        while True:\n",
     "            res = requests.get(f\"https://arquivo.pt/wayback/cdx?url={url}&from={start_domain}&to={end_domain}&output=json\")\n",
     "            if res.ok: break\n",
-    "            if res.status_code == 429:\n",
+    "            if res.status_code == 429: # limit of api calls\n",
     "                time.sleep(10)\n",
     "            else:\n",
     "                valid = False\n",
@@ -270,21 +242,11 @@
     "        \n",
     "        if not valid: continue\n",
     "        \n",
-    "        splitted = res.text.split(\"\\n\")\n",
+    "        splitted = res.text.split(\"\\n\") # response is a string in which each line is JSON for a memento object\n",
     "        \n",
     "        total_amount_of_pages[identifier] += len(splitted)\n",
     "\n",
     "print(\"Amount of pages (including mementos): \" + str(total_amount_of_pages))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "interstate-thomas",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    " "
    ]
   }
  ],
