Saving data to file

--- a/m1-data-preparation/pull-data.ipynb
+++ b/m1-data-preparation/pull-data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "conscious-crack",
+   "id": "adjacent-rebate",
    "metadata": {},
    "source": [
     "# Pulling pages and their mementos from Arquivo.pt\n",
@@ -13,28 +13,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "senior-account",
+   "execution_count": 1,
+   "id": "continent-starter",
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests, json, time, re\n",
     "\n",
     "websites = {\n",
-    "    \"noticias_ao_minuto\": \"http://noticiasaominuto.com\", \n",
-    "    \"publico\": \"http://publico.pt\"\n",
+    "    \"noticias_ao_minuto\": {\n",
+    "        \"url\": \"http://noticiasaominuto.com\",\n",
+    "        \"article_verification_regex\": re.compile(\"^(https:\\/\\/noticiasaominuto\\.com\\/[a-z0-9-%]+\\/[0-9]+\\/[a-z0-9-%]+)(?:\\?.*)?$\")\n",
+    "    }, \n",
+    "    \"publico\": {\n",
+    "        \"url\": \"http://publico.pt\",\n",
+    "        \"article_verification_regex\": re.compile(\"^(http:\\/\\/publico\\.pt\\/[0-9]+\\/[0-9]+\\/[0-9]+\\/[a-z0-9-%]+\\/[a-z0-9-%]+\\/[a-z0-9-%]+)(?:\\?.*)?$\")\n",
+    "    }\n",
     "}\n",
     "start_domain = \"20180101000000\"\n",
     "end_domain = \"20211101000000\"\n",
     "\n",
-    "results = { identifier: requests.get(f\"https://arquivo.pt/textsearch?q=&siteSearch={website}&maxItems=2000&from={start_domain}&to={end_domain}&dedupValue=1&dedupField=url\").json()\n",
+    "results = { identifier: requests.get(f\"https://arquivo.pt/textsearch?q=&siteSearch={website['url']}&maxItems=2000&from={start_domain}&to={end_domain}&dedupValue=1&dedupField=url\").json()\n",
     "               for identifier, website in websites.items() }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "adopted-magnitude",
+   "execution_count": 2,
+   "id": "institutional-appearance",
    "metadata": {},
    "outputs": [
     {
@@ -53,19 +59,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "vocal-event",
+   "execution_count": 3,
+   "id": "floral-destiny",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "----------\n",
+      "---------- noticias_ao_minuto\n",
       "NOT an article: https://noticiasaominuto.com/\n",
       "NOT an article: https://noticiasaominuto.com/robots.txt\n",
       "NOT an article: https://noticiasaominuto.com/manifest.json\n",
-      "----------\n",
+      "---------- publico\n",
       "NOT an article: http://publico.pt/\n",
       "NOT an article: http://publico.pt/troika\n",
       "NOT an article: http://publico.pt/2019/08/01/ciencia/entrevista/quantidade-emissoes-gases-estufa-permitimos-aviacao-absurda-1881906/embed?FromApp=1\n",
@@ -201,52 +207,59 @@
       "NOT an article: http://publico.pt/autor/publico-com-agencias\n",
       "NOT an article: http://publico.pt/lisboa/sobral-de-monte-agraco\n",
       "NOT an article: http://publico.pt/api/user/newsletter/add\n",
-      "Amount of pages (including mementos): {'noticias_ao_minuto': 8632, 'publico': 4065}\n"
+      "Amount of pages (including mementos): {'noticias_ao_minuto': 7391, 'publico': 3713}\n"
      ]
     }
    ],
    "source": [
-    "total_amount_of_pages = {\n",
-    "    \"noticias_ao_minuto\": 0, \n",
-    "    \"publico\": 0\n",
-    "}\n",
+    "total_amount_of_pages = { identifier: 0 for identifier in websites.keys()}\n",
     "\n",
-    "# TODO\n",
-    "# noticias ao minuto sometimes has \"?inlinks=related\" to end of link -> merge the cdx results of the url without GET parameters and with parameters\n",
-    "article_verification_regex = {\n",
-    "    \"noticias_ao_minuto\": re.compile(\"^https:\\/\\/noticiasaominuto\\.com\\/[a-z0-9-%]+\\/[0-9]+\\/[a-z0-9-%]+(?:\\?.*)?$\"),\n",
-    "    \"publico\": re.compile(\"^http:\\/\\/publico\\.pt\\/[0-9]+\\/[0-9]+\\/[0-9]+\\/[a-z0-9-%]+\\/[a-z0-9-%]+\\/[a-z0-9-%]+(?:\\?.*)?$\")\n",
-    "}\n",
+    "output = {}\n",
     "\n",
     "# TODO add progress bar?\n",
     "for identifier, result in results.items():\n",
-    "    print(\"----------\")\n",
+    "    print(f\"---------- {identifier}\")\n",
+    "    output[identifier] = {}\n",
     "    for item in result[\"response_items\"]:\n",
     "        url = item[\"originalURL\"]\n",
     "        \n",
-    "        if not article_verification_regex[identifier].match(url):\n",
+    "        match = websites[identifier][\"article_verification_regex\"].match(url)\n",
+    "        if not match:\n",
     "            print(f\"NOT an article: {url}\")\n",
     "            continue\n",
     "        \n",
-    "        res = None\n",
+    "        base_url = match.group(1) # this gets the first part of the url (without GET parameters)\n",
+    "        if base_url not in output[identifier]:\n",
+    "            output[identifier][base_url] = []\n",
+    "    \n",
+    "        cdx_response = None\n",
+    "        \n",
     "        valid = True\n",
     "        while True:\n",
-    "            res = requests.get(f\"https://arquivo.pt/wayback/cdx?url={url}&from={start_domain}&to={end_domain}&output=json\")\n",
-    "            if res.ok: break\n",
-    "            if res.status_code == 429: # limit of api calls\n",
+    "            cdx_response = requests.get(f\"https://arquivo.pt/wayback/cdx?url={url}&from={start_domain}&to={end_domain}&output=json\")\n",
+    "            if cdx_response.ok: break\n",
+    "            if cdx_response.status_code == 429: # limit of api calls\n",
     "                time.sleep(10)\n",
     "            else:\n",
     "                valid = False\n",
-    "                print(f\"Invalid url (url: {url}, status_code: {res.status_code})\")\n",
+    "                print(f\"Invalid url (url: {url}, status_code: {cdx_response.status_code})\")\n",
     "                break\n",
     "        \n",
     "        if not valid: continue\n",
     "        \n",
-    "        splitted = res.text.split(\"\\n\") # response is a string in which each line is JSON for a memento object\n",
+    "        # response is a string where each line is JSON for a memento object\n",
+    "        # ignoring last line because it is an empty string\n",
+    "        splitted = cdx_response.text.split(\"\\n\")[:-1]\n",
+    "        \n",
+    "        for memento in splitted:\n",
+    "            output[identifier][base_url].append(json.loads(memento)[\"timestamp\"])\n",
     "        \n",
     "        total_amount_of_pages[identifier] += len(splitted)\n",
     "\n",
-    "print(\"Amount of pages (including mementos): \" + str(total_amount_of_pages))"
+    "print(\"Amount of pages (including mementos): \" + str(total_amount_of_pages))\n",
+    "\n",
+    "with open(\"data.json\", \"w\") as file:\n",
+    "    json.dump(output, file, indent=4)"
    ]
   }
  ],
