--- a/m1-data-preparation/pull-data-2.ipynb
+++ b/m1-data-preparation/pull-data-2.ipynb
@@ -4,13 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Read all available news from publico.pt.\n",
-    "To choose only tech news change urlPublico to the following\n",
-    "'''python\n",
+    "- Read all available news from publico.pt.\n",
+    "- To choose only tech news change urlPublico to the following\n",
+    "\n",
+    "```python\n",
     "def urlPublico(year, month, day):\n",
     "    return \"https://arquivo.pt/wayback/cdx?url=publico.pt/{year:04d}/{month:02d}/{day:02d}/tecnologia&matchType=prefix&output=json\".format(year = year, month = month, day = day)\n",
-    "'''\n",
-    "To get news from different dates change start_date and/or end_date"
+    "```\n",
+    "\n",
+    "- To get news from different dates change start_date and/or end_date"
    ]
   },
   {
@@ -61,10 +63,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Clear the news that were fetched.\n",
-    "Multiple news with different timestamps are cleared.\n",
-    "Some websites that are not news are cleared.\n",
-    "Count the number of indexations for each of the news."
+    "- Clear the news that were fetched.\n",
+    "- Multiple news with different timestamps are cleared.\n",
+    "- Some websites that are not news are cleared.\n",
+    "- Count the number of indexations for each of the news."
    ]
   },
   {
@@ -105,8 +107,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fetch the website for the links obtained.\n",
-    "Some sites need to be cleaned (they are not news)."
+    "- Fetch the website for the links obtained.\n",
+    "- Some sites need to be cleaned (they are not news)."
    ]
   },
   {
@@ -131,10 +133,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the end we have 3 dictionaries with the same keys (tittle of the news).\n",
-    "News has all the info provided in the initial API requests.\n",
-    "Number_of_indexations has the number of different timestamps for each website.\n",
-    "Websites contains the HTML for each of the websites."
+    "- In the end we have 3 dictionaries with the same keys (tittle of the news).\n",
+    "- News has all the info provided in the initial API requests.\n",
+    "- Number_of_indexations has the number of different timestamps for each website.\n",
+    "- Websites contains the HTML for each of the websites."
    ]
   },
   {
